--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇰🇷 韩国-347.0KB/s(Youtube:不良林), server: 146.56.110.129, port: 26396, type: vmess, uuid: f4baed1c-ab86-4b70-caa3-df853467e1bd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-209.4KB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-308.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-788.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.08MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇻🇳 越南-435.7KB/s(Youtube:不良林), server: 103.89.91.223, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.89.91.223}}
-  - {name: 🇺🇸 美国-344.3KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.21MB/s(Youtube:不良林), server: 3.36.149.10, port: 56763, type: ss, cipher: chacha20-ietf-poly1305, password: nofifUphu}
-  - {name: 🇨🇦 加拿大-1.54MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-2.80MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-498.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-457.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-483.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-659.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-829.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-347.0KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-435.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-347.0KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-435.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-347.0KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-435.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-347.0KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-435.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-347.0KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-435.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-347.0KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-435.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-347.0KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-435.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
