--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-209.4KB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-308.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.80MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-498.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-457.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-483.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-659.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-829.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-457.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-327.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-464.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-342.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
+  - {name: 🇨🇦 加拿大-2.68MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇻🇳 越南-4.16MB/s(Youtube:不良林), server: 103.166.140.108, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.108}}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-829.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
