--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-659.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-457.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-327.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-464.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-311.7KB/s(Youtube:不良林), server: 120.241.236.113, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.95MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇯🇵 日本-342.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
-  - {name: 🇨🇦 加拿大-2.68MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇻🇳 越南-4.16MB/s(Youtube:不良林), server: 103.166.140.108, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.108}}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-467.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-941.0KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 台湾-5.65MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.75MB/s(Youtube:不良林), server: 3.111.242.2, port: 51846, type: ss, cipher: chacha20-ietf-poly1305, password: RekWopdog8}
+  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 52.13.166.179, port: 59369, type: ss, cipher: chacha20-ietf-poly1305, password: fijboorrom}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-659.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
