--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-311.7KB/s(Youtube:不良林), server: 120.241.236.113, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.95MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇯🇵 日本-342.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-245.1KB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.52MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-327.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇳 中国-467.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇬🇧 英国-941.0KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇨🇳 台湾-5.65MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
